JPublish 4 change log:

[2010.04.20]
  - refactored the servlet response for static resources.
  - honors the "If-Modified-Since" request header and answers with 304-Not modified, if the static
  resource was not changed.

[2010.04.13]
  -added support for annotated REST resources via a JPublish Wink module; JPWink
  -Apache Wink is a full implementation of the JAX-RS 1.0 specification, providing a rich set of
  features and expansions that extend and supplement the JAX-RS specification.

[2010.04.07]
   - added support for Restlet resource and a new configuration syntax (check the JPRestlet module
   changelog). Upgraded Restlet to 1.1.9
   - added Restlet Resource examples for GET, POST, etc

[2009.09.10]
  - added support for the Content-Length response attribute
  - rollback :(

[2009.08.09]
  added generic RSS support. The demo provided (svn) is using a simple Beanshell action as a
  feed manager and the ROME framework for publishing the feed. RSS Domain modeling is in progress and a 
  new JPublish News Repository will follow shortly.

[2009.06.26]
  upgraded to Ehcache 1.6.0 (http://ehcache.sourceforge.net)
  re-factored the JPublish cache support for obtaining cache statistics (if supported)

[2009.05.28]
  upgraded JPublish RESTLET support to Noelios-Restlet-Engine/1.1.5

[2009.05.22]
  the response Content-Type will be calculated just before rendering the result and not before executing the
  actions. This will allow user modules to manipulate the response content type.


[2009.05.19]
  JPRestletModule can now be mapped on a list of paths.

  Example:
  <module classname="org.jpublish.module.restlet.JPRestletModule">
    <urls>
        <url>/rest/*</url>
        <url>/restful/*</url>
    </urls>
    <restlet-config>/WEB-INF/jprestlet-config.xml</restlet-config>
  </module>

  With a configuration like the one above, JPRestletModule will respond for any path starting with
  /rest/ or /restful/. This implementation is backward compliant.



[2009.04.30]